agregue unos div

--- a/index3.html
+++ b/index3.html
@@ -14,5 +14,14 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ea eligendi distinctio enim repellendus velit modi quibusdam est molestias eum, dignissimos quidem quo officia, quos perferendis nulla asperiores reiciendis iste!
     </p>
+
+    <div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur saepe quia nihil voluptatibus velit excepturi placeat reiciendis? Recusandae est sapiente alias inventore, deserunt corporis delectus qui debitis asperiores quaerat? Quibusdam.</p>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam inventore architecto corporis voluptatum enim voluptate fugit sed quis accusantium asperiores, facilis ipsa! Temporibus, maiores dolore praesentium architecto deleniti suscipit explicabo.</p>
+        </div>
+    </div>
 </body>
 </html>
